# torchgeo-experimental

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
configs/: oam-tcd-segmentation.yaml  tile2vec.yaml
scripts/: download_oam-tcd.sh
src/tgexp/: __init__.py  callbacks.py  modules.py
src/tgexp/datasets/: __init__.py  oam_tcd_semantic.py  utils.py
src/tgexp/tile2vec/: __init__.py  dataset.py  model.py  sample_tiles.py  transforms.py
